k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gazette-frontend
  namespace: neural-gazette
spec:
  selector:
    app: gazette-frontend
  ports:
    - port: 80
      targetPort: 80
